# mod-iplimit-manager

./: CMakeLists.txt  INSTALL.md  README.md  mod-iplimit-manager.cmake  mod-iplimit-manager.conf.dist
conf/: mod-iplimit-manager.conf.dist
data/sql/db-auth/: account-ip-logger.sql  account_ip_usage.sql  mod-iplimit-manager-integrated.sql  mod-iplimit-manager.sql
data/sql/db-world/: mod-iplimit-manager.sql
src/: mod-iplimit-manager-loader.cpp  mod-iplimit-manager.cpp  mod-iplimit-manager.h
